tests/unit/default/syntax-error/050-create-table-parens-name-colon-type-params-eq.x.t
---- IN ----
+%table(id:decimal(10,2)=|
---- OUT ----
---- ERR ----
syntax: expected <value> after `...mal(10,2)=` near `|` at position 25 - at line 1
---- EXIT ----
1
